# python-openai

./: .env.example  .gitignore  ARTICLE_GENERATION.md  CONTRIBUTING.md  HEROKU_DEPLOY.md  LICENSE  Procfile  README.md  SECURITY.md  ai_providers.py  article_generator.py  config.py  generate.sh  generateArticle.py  html_utils.py  notifications.py  prompts.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  seed_data.py  seo.py  test_generateArticle.py  test_seed_data.py  utils.py
.github/workflows/: heroku-deploy.yml
ai-generic-generation-content/: pom.xml
ai-generic-generation-content/src/main/java/io/github/aigen/: AiAutoConfiguration.java  ArticleGeneratorAutoConfiguration.java  PreguntaGeneratorAutoConfiguration.java
ai-generic-generation-content/src/main/java/io/github/aigen/article/application/: ArticleAssembler.java  ArticleGeneratorService.java  PromptBuilderService.java  SeoService.java  TextUtils.java
ai-generic-generation-content/src/main/java/io/github/aigen/article/config/: ArticleGeneratorProperties.java
ai-generic-generation-content/src/main/java/io/github/aigen/article/domain/: Article.java  ArticleRequest.java
ai-generic-generation-content/src/main/java/io/github/aigen/pregunta/application/: PreguntaGeneratorService.java
gcloud/: cloud-run-job.yaml  cloudbuild.yaml
k8s/: configmap.yaml
springboot-article-generator/: pom.xml
springboot-article-generator/src/main/java/com/github/juanfernandez/article/: ArticleGeneratorAutoConfiguration.java  PreguntaGeneratorAutoConfiguration.java
(+63 files in other folders)
