[project]
name = "python-article"
version = "0.1.0"
description = "CLI tool to generate SEO-optimized technical articles using LLM providers (OpenAI/Gemini/Ollama)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Juan Francisco Fernández Herreros" }]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["helpers", "prompt", "seed_data"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["."]
python_files = ["test_*.py"]
